// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect[Base] should render correctly  1`] = `
<div>
  <div
    class="c-jklbuk soui-treeSelect-wrapper-empty c-daqos7 soui-treeSelect-wrapper c-euiwgz soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c9rmlrg soui-treeSelect-result-wrapper c-owoisd soui-treeSelect-wrapper-padding-box cyo8ngq soui-treeSelect-wrapper-inner-title-top cdkzfrq soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="c-pwdau1 soui-treeSelect-result"
      >
        <div
          class="c-at53up soui-treeSelect-result-text-wrapper"
        >
          <span
            class="c-wwj6l3 soui-treeSelect-placeholder c-jld8md soui-treeSelect-ellipsis"
          >
            <span>
              Please select content
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-qzu9ps soui-treeSelect-icon-wrapper"
      >
        <span
          class="c-at49uw soui-treeSelect-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c-mpgk4l soui-treeSelect-picker-wrapper"
      data-sheinx-animation-duration="fast"
      data-sheinx-animation-type="scale-y"
      style="pointer-events: none; position: absolute; z-index: -1000; opacity: 0; display: none; transform: scaleY(1);"
    >
      <div
        class="c-vahdso soui-treeSelect-tree"
        style="max-height: 250px;"
      >
        <div
          class="ca75d1o soui-tree-tree c-4b6snx soui-tree-noline"
        >
          <div
            class="ca7413k soui-tree-root"
            style="display: block;"
          >
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    <span>
                      node 1
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    <span>
                      node 2
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    <span>
                      node 3
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect[Base] should render correctly about compressed 1`] = `
<div>
  <div
    class="c-jklbuk soui-treeSelect-wrapper-empty c-daqos7 soui-treeSelect-wrapper c-euiwgz soui-treeSelect-clearable c-bwfyjq soui-treeSelect-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c9rmlrg soui-treeSelect-result-wrapper c-owoisd soui-treeSelect-wrapper-padding-box cyo8ngq soui-treeSelect-wrapper-inner-title-top cdkzfrq soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="c-pwdau1 soui-treeSelect-result"
      >
        <div
          class="c-at53up soui-treeSelect-result-text-wrapper cvs113c soui-treeSelect-compressed-wrapper csv9rwc soui-treeSelect-multiple-result-wrapper cidx7ko soui-treeSelect-multiple-compressed-wrapper"
        >
          <span
            class="c-wwj6l3 soui-treeSelect-placeholder c-jld8md soui-treeSelect-ellipsis"
          >
            <span>
              Please select content
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-qzu9ps soui-treeSelect-icon-wrapper"
      >
        <span
          class="c-at49uw soui-treeSelect-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c-mpgk4l soui-treeSelect-picker-wrapper"
      data-sheinx-animation-duration="fast"
      data-sheinx-animation-type="scale-y"
      style="pointer-events: none; position: absolute; z-index: -1000; opacity: 0; display: none; transform: scaleY(1);"
    >
      <div
        class="c-vahdso soui-treeSelect-tree"
        style="max-height: 250px;"
      >
        <div
          class="ca75d1o soui-tree-tree c-4b6snx soui-tree-noline"
        >
          <div
            class="ca7413k soui-tree-root"
            style="display: block;"
          >
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="c-jwiw0f soui-tree-checkbox cfisc68 soui-checkbox-wrapper"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="checkbox"
                    />
                    <span
                      class="ccbsv87 soui-checkbox-indicator-wrapper c-3nloer soui-checkbox-dark-indicator-wrapper"
                    >
                      <i
                        class="c-bf0pb8 soui-checkbox-indicator"
                        data-soui-role="checkbox-indicator"
                        tabindex="1"
                      />
                    </span>
                  </div>
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    node 1
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="c-jwiw0f soui-tree-checkbox cfisc68 soui-checkbox-wrapper"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="checkbox"
                    />
                    <span
                      class="ccbsv87 soui-checkbox-indicator-wrapper c-3nloer soui-checkbox-dark-indicator-wrapper"
                    >
                      <i
                        class="c-bf0pb8 soui-checkbox-indicator"
                        data-soui-role="checkbox-indicator"
                        tabindex="1"
                      />
                    </span>
                  </div>
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    node 2
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="c-jwiw0f soui-tree-checkbox cfisc68 soui-checkbox-wrapper"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="checkbox"
                    />
                    <span
                      class="ccbsv87 soui-checkbox-indicator-wrapper c-3nloer soui-checkbox-dark-indicator-wrapper"
                    >
                      <i
                        class="c-bf0pb8 soui-checkbox-indicator"
                        data-soui-role="checkbox-indicator"
                        tabindex="1"
                      />
                    </span>
                  </div>
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    node 3
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect[Base] should render correctly about disabled 1`] = `
<div>
  <div
    class="c-jklbuk soui-treeSelect-wrapper-empty c-daqos7 soui-treeSelect-wrapper c7hf2jp soui-treeSelect-wrapper-disabled c-euiwgz soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 250px;"
  >
    <div
      class="c9rmlrg soui-treeSelect-result-wrapper c-owoisd soui-treeSelect-wrapper-padding-box cyo8ngq soui-treeSelect-wrapper-inner-title-top cdkzfrq soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="c-pwdau1 soui-treeSelect-result"
      >
        <div
          class="c-at53up soui-treeSelect-result-text-wrapper"
        >
          <span
            class="c-wwj6l3 soui-treeSelect-placeholder c-jld8md soui-treeSelect-ellipsis"
          >
            <span>
              Please select content
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-qzu9ps soui-treeSelect-icon-wrapper"
      >
        <span
          class="c-at49uw soui-treeSelect-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c-mpgk4l soui-treeSelect-picker-wrapper"
      data-sheinx-animation-duration="fast"
      data-sheinx-animation-type="scale-y"
      style="pointer-events: none; position: absolute; z-index: -1000; opacity: 0; display: none; transform: scaleY(1);"
    >
      <div
        class="c-vahdso soui-treeSelect-tree"
        style="max-height: 250px;"
      >
        <div
          class="ca75d1o soui-tree-tree c-4b6snx soui-tree-noline"
        >
          <div
            class="ca7413k soui-tree-root"
            style="display: block;"
          >
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content c-anl545 soui-treeSelect-option-disabled"
                  data-disabled="true"
                >
                  <div
                    class="ca753vf soui-tree-text c-3ivxqh soui-tree-text-disabled"
                  >
                    <span>
                      node 1
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content c-anl545 soui-treeSelect-option-disabled"
                  data-disabled="true"
                >
                  <div
                    class="ca753vf soui-tree-text c-3ivxqh soui-tree-text-disabled"
                  >
                    <span>
                      node 2
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content c-anl545 soui-treeSelect-option-disabled"
                  data-disabled="true"
                >
                  <div
                    class="ca753vf soui-tree-text c-3ivxqh soui-tree-text-disabled"
                  >
                    <span>
                      node 3
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c-jklbuk soui-treeSelect-wrapper-empty c-daqos7 soui-treeSelect-wrapper c-euiwgz soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 300px; margin-left: 24px;"
    tabindex="0"
  >
    <div
      class="c9rmlrg soui-treeSelect-result-wrapper c-owoisd soui-treeSelect-wrapper-padding-box cyo8ngq soui-treeSelect-wrapper-inner-title-top cdkzfrq soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="c-pwdau1 soui-treeSelect-result"
      >
        <div
          class="c-at53up soui-treeSelect-result-text-wrapper"
        >
          <span
            class="c-wwj6l3 soui-treeSelect-placeholder c-jld8md soui-treeSelect-ellipsis"
          >
            <span>
              Please select content
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-qzu9ps soui-treeSelect-icon-wrapper"
      >
        <span
          class="c-at49uw soui-treeSelect-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c-mpgk4l soui-treeSelect-picker-wrapper"
      data-sheinx-animation-duration="fast"
      data-sheinx-animation-type="scale-y"
      style="pointer-events: none; position: absolute; z-index: -1000; opacity: 0; display: none; transform: scaleY(1);"
    >
      <div
        class="c-vahdso soui-treeSelect-tree"
        style="max-height: 250px;"
      >
        <div
          class="ca75d1o soui-tree-tree c-4b6snx soui-tree-noline"
        >
          <div
            class="ca7413k soui-tree-root"
            style="display: block;"
          >
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    <span>
                      node 1
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    <span>
                      node 2
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    <span>
                      node 3
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect[Base] should render correctly about filter 1`] = `
<div>
  <div
    class="c-jklbuk soui-treeSelect-wrapper-empty c-daqos7 soui-treeSelect-wrapper c-euiwgz soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="c9rmlrg soui-treeSelect-result-wrapper c-owoisd soui-treeSelect-wrapper-padding-box cyo8ngq soui-treeSelect-wrapper-inner-title-top cdkzfrq soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="c-pwdau1 soui-treeSelect-result"
      >
        <div
          class="c-at53up soui-treeSelect-result-text-wrapper"
        >
          <input
            autocomplete="off"
            placeholder="Please select content"
            style="width: 100%;"
            value=""
          />
          <span
            class="ck5wwpr soui-treeSelect-input-mirror"
          />
        </div>
      </div>
      <div
        class="c-qzu9ps soui-treeSelect-icon-wrapper"
      >
        <span
          class="c-at49uw soui-treeSelect-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c-mpgk4l soui-treeSelect-picker-wrapper"
      data-sheinx-animation-duration="fast"
      data-sheinx-animation-type="scale-y"
      style="pointer-events: none; position: absolute; z-index: -1000; opacity: 0; display: none; transform: scaleY(1);"
    >
      <div
        class="c-vahdso soui-treeSelect-tree"
        style="max-height: 250px;"
      >
        <div
          class="ca75d1o soui-tree-tree c-4b6snx soui-tree-noline"
        >
          <div
            class="ca7413k soui-tree-root"
            style="display: block;"
          >
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    <span>
                      node 1
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    <span>
                      node 2
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    <span>
                      node 3
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect[Base] should render correctly about filter more 1`] = `
<div>
  <div
    class="c-jklbuk soui-treeSelect-wrapper-empty c-daqos7 soui-treeSelect-wrapper c-euiwgz soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="c9rmlrg soui-treeSelect-result-wrapper c-owoisd soui-treeSelect-wrapper-padding-box cyo8ngq soui-treeSelect-wrapper-inner-title-top cdkzfrq soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="c-pwdau1 soui-treeSelect-result"
      >
        <div
          class="c-at53up soui-treeSelect-result-text-wrapper"
        >
          <input
            autocomplete="off"
            placeholder="Please select content"
            style="width: 100%;"
            value=""
          />
          <span
            class="ck5wwpr soui-treeSelect-input-mirror"
          />
        </div>
      </div>
      <div
        class="c-qzu9ps soui-treeSelect-icon-wrapper"
      >
        <span
          class="c-at49uw soui-treeSelect-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c-mpgk4l soui-treeSelect-picker-wrapper"
      data-sheinx-animation-duration="fast"
      data-sheinx-animation-type="scale-y"
      style="pointer-events: none; position: absolute; z-index: -1000; opacity: 0; display: none; transform: scaleY(1);"
    >
      <div
        class="c-vahdso soui-treeSelect-tree"
        style="max-height: 250px;"
      >
        <div
          class="ca75d1o soui-tree-tree c-4b6snx soui-tree-noline"
        >
          <div
            class="ca7413k soui-tree-root"
            style="display: block;"
          >
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    <span>
                      jiangsu
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    <span>
                      anhui
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect[Base] should render correctly about inner title 1`] = `
<div>
  <div
    class="c-jklbuk soui-treeSelect-wrapper-empty c-daqos7 soui-treeSelect-wrapper c-cy7pmd soui-treeSelect-wrapper-inner-title c-euiwgz soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c9rmlrg soui-treeSelect-result-wrapper c-owoisd soui-treeSelect-wrapper-padding-box cyo8ngq soui-treeSelect-wrapper-inner-title-top cdkzfrq soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="c-eiiexq soui-inner-title-wrapper"
      >
        <div
          class="cwj3xif soui-inner-title-title cnopan8 soui-inner-title-top"
        >
          Please select content
        </div>
        <div
          class="cwgy9sm soui-inner-title-place"
        >
          <div
            class="cwj3xif soui-inner-title-title"
          >
            Please select content
          </div>
        </div>
        <div
          class="c-p5x2yg soui-inner-title-content"
        >
          <div
            class="c-pwdau1 soui-treeSelect-result"
          >
            <div
              class="c-at53up soui-treeSelect-result-text-wrapper"
            >
              <div
                class="coe0qgs soui-treeSelect-space"
              >
                 
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c-qzu9ps soui-treeSelect-icon-wrapper"
      >
        <span
          class="c-at49uw soui-treeSelect-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c-mpgk4l soui-treeSelect-picker-wrapper"
      data-sheinx-animation-duration="fast"
      data-sheinx-animation-type="scale-y"
      style="pointer-events: none; position: absolute; z-index: -1000; opacity: 0; display: none; transform: scaleY(1);"
    >
      <div
        class="c-vahdso soui-treeSelect-tree"
        style="max-height: 250px;"
      >
        <div
          class="ca75d1o soui-tree-tree c-4b6snx soui-tree-noline"
        >
          <div
            class="ca7413k soui-tree-root"
            style="display: block;"
          >
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    <span>
                      node 1
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    <span>
                      node 2
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    <span>
                      node 3
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect[Base] should render correctly about loader 1`] = `
<div
  class="c-jklbuk soui-treeSelect-wrapper-empty c-daqos7 soui-treeSelect-wrapper c-euiwgz soui-treeSelect-clearable c-bwfyjq soui-treeSelect-multiple"
  data-soui-input-border="true"
  style="width: 300px;"
  tabindex="0"
>
  <div
    class="c9rmlrg soui-treeSelect-result-wrapper c-owoisd soui-treeSelect-wrapper-padding-box cyo8ngq soui-treeSelect-wrapper-inner-title-top cdkzfrq soui-treeSelect-wrapper-inner-title-bottom"
  >
    <div
      class="c-pwdau1 soui-treeSelect-result"
    >
      <div
        class="c-at53up soui-treeSelect-result-text-wrapper csv9rwc soui-treeSelect-multiple-result-wrapper"
      >
        <span
          class="c-wwj6l3 soui-treeSelect-placeholder c-jld8md soui-treeSelect-ellipsis"
        >
          <span>
            Please select content
          </span>
        </span>
      </div>
    </div>
    <div
      class="c-qzu9ps soui-treeSelect-icon-wrapper"
    >
      <span
        class="c-at49uw soui-treeSelect-arrow-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    class="c-mpgk4l soui-treeSelect-picker-wrapper"
    data-sheinx-animation-duration="fast"
    data-sheinx-animation-type="scale-y"
    style="pointer-events: none; position: absolute; z-index: -1000; opacity: 0; display: none; transform: scaleY(1);"
  >
    <div
      class="c-vahdso soui-treeSelect-tree"
      style="max-height: 250px;"
    >
      <div
        class="ca75d1o soui-tree-tree c-4b6snx soui-tree-noline"
      >
        <div
          class="ca7413k soui-tree-root"
          style="display: block;"
        >
          <div
            class="ca71gvk soui-tree-node ca6zzf0 soui-tree-leaf"
          >
            <div
              class="cbfw16w soui-tree-content-wrapper"
            >
              <span
                class="chz7qlo soui-tree-icon-wrapper"
                data-expanded="false"
                data-icon="false"
              >
                <span
                  class="ca6y1bb soui-tree-icon"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="c-axh5h1 soui-tree-content"
              >
                <div
                  class="c-jwiw0f soui-tree-checkbox cfisc68 soui-checkbox-wrapper"
                >
                  <input
                    style="display: none;"
                    tabindex="0"
                    type="checkbox"
                  />
                  <span
                    class="ccbsv87 soui-checkbox-indicator-wrapper c-3nloer soui-checkbox-dark-indicator-wrapper"
                  >
                    <i
                      class="c-bf0pb8 soui-checkbox-indicator"
                      data-soui-role="checkbox-indicator"
                      tabindex="1"
                    />
                  </span>
                </div>
                <div
                  class="ca753vf soui-tree-text"
                >
                  node 0
                </div>
              </div>
            </div>
          </div>
          <div
            class="ca71gvk soui-tree-node ca6zzf0 soui-tree-leaf"
          >
            <div
              class="cbfw16w soui-tree-content-wrapper"
            >
              <span
                class="chz7qlo soui-tree-icon-wrapper"
                data-expanded="false"
                data-icon="false"
              >
                <span
                  class="ca6y1bb soui-tree-icon"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="c-axh5h1 soui-tree-content"
              >
                <div
                  class="c-jwiw0f soui-tree-checkbox cfisc68 soui-checkbox-wrapper"
                >
                  <input
                    style="display: none;"
                    tabindex="0"
                    type="checkbox"
                  />
                  <span
                    class="ccbsv87 soui-checkbox-indicator-wrapper c-3nloer soui-checkbox-dark-indicator-wrapper"
                  >
                    <i
                      class="c-bf0pb8 soui-checkbox-indicator"
                      data-soui-role="checkbox-indicator"
                      tabindex="1"
                    />
                  </span>
                </div>
                <div
                  class="ca753vf soui-tree-text"
                >
                  node 1
                </div>
              </div>
            </div>
          </div>
          <div
            class="ca71gvk soui-tree-node ca6zzf0 soui-tree-leaf"
          >
            <div
              class="cbfw16w soui-tree-content-wrapper"
            >
              <span
                class="chz7qlo soui-tree-icon-wrapper"
                data-expanded="false"
                data-icon="false"
              >
                <span
                  class="ca6y1bb soui-tree-icon"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="c-axh5h1 soui-tree-content"
              >
                <div
                  class="c-jwiw0f soui-tree-checkbox cfisc68 soui-checkbox-wrapper"
                >
                  <input
                    style="display: none;"
                    tabindex="0"
                    type="checkbox"
                  />
                  <span
                    class="ccbsv87 soui-checkbox-indicator-wrapper c-3nloer soui-checkbox-dark-indicator-wrapper"
                  >
                    <i
                      class="c-bf0pb8 soui-checkbox-indicator"
                      data-soui-role="checkbox-indicator"
                      tabindex="1"
                    />
                  </span>
                </div>
                <div
                  class="ca753vf soui-tree-text"
                >
                  node 2
                </div>
              </div>
            </div>
          </div>
          <div
            class="ca71gvk soui-tree-node ca6zzf0 soui-tree-leaf"
          >
            <div
              class="cbfw16w soui-tree-content-wrapper"
            >
              <span
                class="chz7qlo soui-tree-icon-wrapper"
                data-expanded="false"
                data-icon="false"
              >
                <span
                  class="ca6y1bb soui-tree-icon"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="c-axh5h1 soui-tree-content"
              >
                <div
                  class="c-jwiw0f soui-tree-checkbox cfisc68 soui-checkbox-wrapper"
                >
                  <input
                    style="display: none;"
                    tabindex="0"
                    type="checkbox"
                  />
                  <span
                    class="ccbsv87 soui-checkbox-indicator-wrapper c-3nloer soui-checkbox-dark-indicator-wrapper"
                  >
                    <i
                      class="c-bf0pb8 soui-checkbox-indicator"
                      data-soui-role="checkbox-indicator"
                      tabindex="1"
                    />
                  </span>
                </div>
                <div
                  class="ca753vf soui-tree-text"
                >
                  node 3
                </div>
              </div>
            </div>
          </div>
          <div
            class="ca71gvk soui-tree-node ca6zzf0 soui-tree-leaf"
          >
            <div
              class="cbfw16w soui-tree-content-wrapper"
            >
              <span
                class="chz7qlo soui-tree-icon-wrapper"
                data-expanded="false"
                data-icon="false"
              >
                <span
                  class="ca6y1bb soui-tree-icon"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="c-axh5h1 soui-tree-content"
              >
                <div
                  class="c-jwiw0f soui-tree-checkbox cfisc68 soui-checkbox-wrapper"
                >
                  <input
                    style="display: none;"
                    tabindex="0"
                    type="checkbox"
                  />
                  <span
                    class="ccbsv87 soui-checkbox-indicator-wrapper c-3nloer soui-checkbox-dark-indicator-wrapper"
                  >
                    <i
                      class="c-bf0pb8 soui-checkbox-indicator"
                      data-soui-role="checkbox-indicator"
                      tabindex="1"
                    />
                  </span>
                </div>
                <div
                  class="ca753vf soui-tree-text"
                >
                  node 4
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect[Base] should render correctly about multiple 1`] = `
<div>
  <div
    class="c-jklbuk soui-treeSelect-wrapper-empty c-daqos7 soui-treeSelect-wrapper c-euiwgz soui-treeSelect-clearable c-bwfyjq soui-treeSelect-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c9rmlrg soui-treeSelect-result-wrapper c-owoisd soui-treeSelect-wrapper-padding-box cyo8ngq soui-treeSelect-wrapper-inner-title-top cdkzfrq soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="c-pwdau1 soui-treeSelect-result"
      >
        <div
          class="c-at53up soui-treeSelect-result-text-wrapper csv9rwc soui-treeSelect-multiple-result-wrapper"
        >
          <span
            class="c-wwj6l3 soui-treeSelect-placeholder c-jld8md soui-treeSelect-ellipsis"
          >
            <span>
              Please select content
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-qzu9ps soui-treeSelect-icon-wrapper"
      >
        <span
          class="c-at49uw soui-treeSelect-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c-mpgk4l soui-treeSelect-picker-wrapper"
      data-sheinx-animation-duration="fast"
      data-sheinx-animation-type="scale-y"
      style="pointer-events: none; position: absolute; z-index: -1000; opacity: 0; display: none; transform: scaleY(1);"
    >
      <div
        class="c-vahdso soui-treeSelect-tree"
        style="max-height: 250px;"
      >
        <div
          class="ca75d1o soui-tree-tree c-4b6snx soui-tree-noline"
        >
          <div
            class="ca7413k soui-tree-root"
            style="display: block;"
          >
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="c-jwiw0f soui-tree-checkbox cfisc68 soui-checkbox-wrapper"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="checkbox"
                    />
                    <span
                      class="ccbsv87 soui-checkbox-indicator-wrapper c-3nloer soui-checkbox-dark-indicator-wrapper"
                    >
                      <i
                        class="c-bf0pb8 soui-checkbox-indicator"
                        data-soui-role="checkbox-indicator"
                        tabindex="1"
                      />
                    </span>
                  </div>
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    node 1
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="c-jwiw0f soui-tree-checkbox cfisc68 soui-checkbox-wrapper"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="checkbox"
                    />
                    <span
                      class="ccbsv87 soui-checkbox-indicator-wrapper c-3nloer soui-checkbox-dark-indicator-wrapper"
                    >
                      <i
                        class="c-bf0pb8 soui-checkbox-indicator"
                        data-soui-role="checkbox-indicator"
                        tabindex="1"
                      />
                    </span>
                  </div>
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    node 2
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="c-jwiw0f soui-tree-checkbox cfisc68 soui-checkbox-wrapper"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="checkbox"
                    />
                    <span
                      class="ccbsv87 soui-checkbox-indicator-wrapper c-3nloer soui-checkbox-dark-indicator-wrapper"
                    >
                      <i
                        class="c-bf0pb8 soui-checkbox-indicator"
                        data-soui-role="checkbox-indicator"
                        tabindex="1"
                      />
                    </span>
                  </div>
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    node 3
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect[Base] should render correctly about size 1`] = `
<div
  style="width: 100%; display: flex; align-items: center; gap: 24px;"
>
  <div
    class="c-jklbuk soui-treeSelect-wrapper-empty c-daqos7 soui-treeSelect-wrapper c-jcwiv6 soui-treeSelect-wrapper-small c-euiwgz soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c9rmlrg soui-treeSelect-result-wrapper c-owoisd soui-treeSelect-wrapper-padding-box cyo8ngq soui-treeSelect-wrapper-inner-title-top cdkzfrq soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="c-pwdau1 soui-treeSelect-result"
      >
        <div
          class="c-at53up soui-treeSelect-result-text-wrapper"
        >
          <span
            class="c-wwj6l3 soui-treeSelect-placeholder c-jld8md soui-treeSelect-ellipsis"
          >
            <span>
              Please select content
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-qzu9ps soui-treeSelect-icon-wrapper"
      >
        <span
          class="c-at49uw soui-treeSelect-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c-mpgk4l soui-treeSelect-picker-wrapper"
      data-sheinx-animation-duration="fast"
      data-sheinx-animation-type="scale-y"
      style="pointer-events: none; position: absolute; z-index: -1000; opacity: 0; display: none; transform: scaleY(1);"
    >
      <div
        class="c-vahdso soui-treeSelect-tree"
        style="max-height: 250px;"
      >
        <div
          class="ca75d1o soui-tree-tree c-4b6snx soui-tree-noline"
        >
          <div
            class="ca7413k soui-tree-root"
            style="display: block;"
          >
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    <span>
                      node 1
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    <span>
                      node 2
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    <span>
                      node 3
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c-jklbuk soui-treeSelect-wrapper-empty c-daqos7 soui-treeSelect-wrapper c-euiwgz soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c9rmlrg soui-treeSelect-result-wrapper c-owoisd soui-treeSelect-wrapper-padding-box cyo8ngq soui-treeSelect-wrapper-inner-title-top cdkzfrq soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="c-pwdau1 soui-treeSelect-result"
      >
        <div
          class="c-at53up soui-treeSelect-result-text-wrapper"
        >
          <span
            class="c-wwj6l3 soui-treeSelect-placeholder c-jld8md soui-treeSelect-ellipsis"
          >
            <span>
              Please select content
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-qzu9ps soui-treeSelect-icon-wrapper"
      >
        <span
          class="c-at49uw soui-treeSelect-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c-mpgk4l soui-treeSelect-picker-wrapper"
      data-sheinx-animation-duration="fast"
      data-sheinx-animation-type="scale-y"
      style="pointer-events: none; position: absolute; z-index: -1000; opacity: 0; display: none; transform: scaleY(1);"
    >
      <div
        class="c-vahdso soui-treeSelect-tree"
        style="max-height: 250px;"
      >
        <div
          class="ca75d1o soui-tree-tree c-4b6snx soui-tree-noline"
        >
          <div
            class="ca7413k soui-tree-root"
            style="display: block;"
          >
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    <span>
                      node 1
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    <span>
                      node 2
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    <span>
                      node 3
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c-jklbuk soui-treeSelect-wrapper-empty c-daqos7 soui-treeSelect-wrapper c-jgyedq soui-treeSelect-wrapper-large c-euiwgz soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c9rmlrg soui-treeSelect-result-wrapper c-owoisd soui-treeSelect-wrapper-padding-box cyo8ngq soui-treeSelect-wrapper-inner-title-top cdkzfrq soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="c-pwdau1 soui-treeSelect-result"
      >
        <div
          class="c-at53up soui-treeSelect-result-text-wrapper"
        >
          <span
            class="c-wwj6l3 soui-treeSelect-placeholder c-jld8md soui-treeSelect-ellipsis"
          >
            <span>
              Please select content
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-qzu9ps soui-treeSelect-icon-wrapper"
      >
        <span
          class="c-at49uw soui-treeSelect-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c-mpgk4l soui-treeSelect-picker-wrapper"
      data-sheinx-animation-duration="fast"
      data-sheinx-animation-type="scale-y"
      style="pointer-events: none; position: absolute; z-index: -1000; opacity: 0; display: none; transform: scaleY(1);"
    >
      <div
        class="c-vahdso soui-treeSelect-tree"
        style="max-height: 250px;"
      >
        <div
          class="ca75d1o soui-tree-tree c-4b6snx soui-tree-noline"
        >
          <div
            class="ca7413k soui-tree-root"
            style="display: block;"
          >
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    <span>
                      node 1
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    <span>
                      node 2
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    <span>
                      node 3
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect[Base] should render correctly about unmatch 1`] = `
<div>
  <div
    class="c-daqos7 soui-treeSelect-wrapper c-euiwgz soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c9rmlrg soui-treeSelect-result-wrapper c-owoisd soui-treeSelect-wrapper-padding-box cyo8ngq soui-treeSelect-wrapper-inner-title-top cdkzfrq soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="c-pwdau1 soui-treeSelect-result"
      >
        <div
          class="c-at53up soui-treeSelect-result-text-wrapper"
        >
          <span
            class="c-jld8md soui-treeSelect-ellipsis"
          >
            I'm unmatched item
          </span>
        </div>
      </div>
      <div
        class="c-qzu9ps soui-treeSelect-icon-wrapper"
      >
        <span
          class="c-euy7c4 soui-treeSelect-clear-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 23C5.924 23 1 18.076 1 12C1 5.924 5.924 1 12 1C18.076 1 23 5.924 23 12C23 18.076 18.076 23 12 23Z"
              fill="currentColor"
            />
            <path
              d="M9.6129 8.2097C9.22061 7.90468 8.65338 7.93241 8.29289 8.29289C7.90237 8.68342 7.90237 9.31658 8.29289 9.70711L10.413 11.828L8.29289 13.9497L8.2097 14.044C7.90468 14.4362 7.93241 15.0035 8.29289 15.364C8.68342 15.7545 9.31658 15.7545 9.70711 15.364L11.828 13.242L13.9497 15.364L14.044 15.4471C14.4362 15.7522 15.0035 15.7244 15.364 15.364C15.7545 14.9734 15.7545 14.3403 15.364 13.9497L13.242 11.828L15.364 9.70711L15.4471 9.6129C15.7522 9.22061 15.7244 8.65338 15.364 8.29289C14.9734 7.90237 14.3403 7.90237 13.9497 8.29289L11.828 10.413L9.70711 8.29289L9.6129 8.2097Z"
              fill="white"
            />
          </svg>
        </span>
        <span
          class="c-at49uw soui-treeSelect-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c-mpgk4l soui-treeSelect-picker-wrapper"
      data-sheinx-animation-duration="fast"
      data-sheinx-animation-type="scale-y"
      style="pointer-events: none; position: absolute; z-index: -1000; opacity: 0; display: none; transform: scaleY(1);"
    >
      <div
        class="c-vahdso soui-treeSelect-tree"
        style="max-height: 250px;"
      >
        <div
          class="ca75d1o soui-tree-tree c-4b6snx soui-tree-noline"
        >
          <div
            class="ca7413k soui-tree-root"
            style="display: block;"
          >
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    <span>
                      node 1
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    <span>
                      node 2
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ca71gvk soui-tree-node"
            >
              <div
                class="cbfw16w soui-tree-content-wrapper ce3zp68 soui-tree-childnode"
              >
                <span
                  class="chz7qlo soui-tree-icon-wrapper"
                  data-expanded="false"
                  data-icon="false"
                >
                  <span
                    class="ca6y1bb soui-tree-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="c-axh5h1 soui-tree-content"
                >
                  <div
                    class="ca753vf soui-tree-text"
                  >
                    <span>
                      node 3
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
